--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -61,7 +61,7 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/etProductPrice"
                             android:inputType="number"
-                            android:hint="Selling Price Rupiah"/>
+                            android:hint="Selling Price Per Item"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <LinearLayout
@@ -69,11 +69,11 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:id="@+id/layoutProductWholeSale"
-                        android:layout_marginTop="7dp">
+                        android:layout_marginTop="8dp">
 
                         <ImageView
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="23dp"
+                            android:layout_height="23dp"
                             android:src="@drawable/tag"
                             android:layout_marginEnd="5dp"/>
                         <TextView
