--- a/app/src/main/res/layout/fragment_manage_product_update_product.xml
+++ b/app/src/main/res/layout/fragment_manage_product_update_product.xml
@@ -62,8 +62,30 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/etManageProductPrice"
                             android:inputType="number"
-                            android:hint="Selling Price Rupiah"/>
+                            android:hint="Selling Price Per Item"/>
                     </com.google.android.material.textfield.TextInputLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:id="@+id/layoutManageProductWholeSale"
+                        android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:layout_width="23dp"
+                            android:layout_height="23dp"
+                            android:src="@drawable/tag"
+                            android:layout_marginEnd="5dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="WholeSale Detail"
+                            android:gravity="center_vertical"
+                            android:id="@+id/tvManageProductWholeSaleTitle"
+                            android:textColor="@color/colorPrimary"/>
+                    </LinearLayout>
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
