--- a/app/src/main/res/layout/row_cart.xml
+++ b/app/src/main/res/layout/row_cart.xml
@@ -29,12 +29,38 @@
             android:layout_marginHorizontal="5dp"
             android:id="@+id/tvRowCartName"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:layout_marginStart="5dp"
-            android:id="@+id/tvRowCartPrice"/>
+            android:orientation="horizontal">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:id="@+id/layoutRowCartDiscount">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    android:id="@+id/tvRowCartDiscountPrice"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:background="@color/colorGrey"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="12sp"
+                    android:textColor="@color/colorGrey"
+                    android:id="@+id/tvRowCartDiscountPriceLine"/>
+            </FrameLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:id="@+id/tvRowCartPrice"
+                android:layout_marginStart="5dp"/>
+        </LinearLayout>
     </LinearLayout>
 
     <TextView
@@ -44,7 +70,7 @@
         android:layout_margin="5dp"
         android:textSize="14sp"
         android:layout_weight="4"
-        android:gravity="center_vertical |end"
+        android:gravity="center_vertical|end"
         android:id="@+id/tvRowCartTotalPrice"/>
 
 </LinearLayout>
