--- a/app/src/main/res/layout/row_check_out_list.xml
+++ b/app/src/main/res/layout/row_check_out_list.xml
@@ -45,7 +45,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorBlack"
                     android:textSize="16sp"
-                    android:text="Product Name"
                     android:id="@+id/tvRowCheckOutProdName"/>
 
                 <LinearLayout
@@ -60,16 +59,15 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="italic"
-                            android:text="Rp 10.000"
                             android:id="@+id/tvRowCheckOutDiscount"/>
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_gravity="center_vertical"
-                            android:text="Rp 10.000"
+                            android:textSize="12sp"
                             android:textColor="@color/colorBlack"
                             android:id="@+id/tvRowCheckOutDiscountLine"
                             android:background="@color/colorBlack"/>
@@ -80,8 +78,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorRed"
                         android:textSize="14sp"
-                        android:id="@+id/tvRowCheckOutPrice"
-                        android:text="Rp 10.000"/>
+                        android:id="@+id/tvRowCheckOutPrice"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -99,7 +96,6 @@
                     android:textColor="@color/colorBlack"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    android:text="Total: Rp 10.000"
                     android:id="@+id/tvRowCheckOutTotalPrice"
                     android:layout_marginHorizontal="8dp"/>
 
@@ -115,7 +111,6 @@
                     android:layout_height="21sp"
                     android:textColor="@color/colorBlack"
                     android:gravity="center"
-                    android:text="1"
                     android:layout_marginHorizontal="8dp"
                     android:id="@+id/tvRowCheckOutQty"/>
 
