--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -57,16 +57,30 @@
         android:layout_weight="6">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlack"
             android:textSize="16sp"
             android:id="@+id/tvRowProductName"/>
 
-        <TextView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvRowProductPrice"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvRowProductPrice"/>
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="3dp"
+                android:src="@drawable/tag"
+                android:id="@+id/ivRowProductWholeSale"/>
+        </LinearLayout>
 
     </LinearLayout>
 
