--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -82,6 +82,16 @@
     </fragment>
 
     <fragment
+        android:id="@+id/nav_merchant_list"
+        android:name="com.chcreation.pointofsale.merchant.MerchantListFragment"
+        android:label="Switch Merchants"
+        tools:layout="@layout/fragment_merchant_list" >
+        <action
+            android:id="@+id/action_nav_slideshow_to_nav_home"
+            app:destination="@id/nav_check_out" />
+    </fragment>
+
+    <fragment
         android:id="@+id/nav_analytics"
         android:name="com.chcreation.pointofsale.analytic.AnalyticFragment"
         android:label="Analytic"
