--- a/app/src/main/res/layout/activity_merchant.xml
+++ b/app/src/main/res/layout/activity_merchant.xml
@@ -37,7 +37,7 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="10dp"
         android:id="@+id/btnMerchant"
