- Fixing Checkout Pending

--- a/app/src/main/res/layout/activity_detail_transaction.xml
+++ b/app/src/main/res/layout/activity_detail_transaction.xml
@@ -9,8 +9,8 @@
     tools:context=".transaction.DetailTransactionActivity">
 
     <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/pbDetailTransaction"
         android:visibility="gone"
         android:layout_gravity="center"/>
