--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -23,11 +23,12 @@
         android:paddingVertical="5dp"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:visibility="gone"
         android:textColor="@color/colorBlack"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/colorBlack"/>
 
     <TextView
