--- a/app/src/main/res/layout/activity_manage_product_manage_stock.xml
+++ b/app/src/main/res/layout/activity_manage_product_manage_stock.xml
@@ -27,7 +27,7 @@
         <EditText
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:layout_gravity="center"
             android:textColor="@color/colorBlack"
             android:gravity="center"
