--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -54,7 +54,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/etProductPrice"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:hint="Selling Price Per Item"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -122,7 +122,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/etProductCost"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:hint="Buying Price"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -209,7 +209,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:id="@+id/etProductStock"
-                            android:inputType="number"
+                            android:inputType="numberDecimal"
                             android:text="1"
                             android:textAlignment="center"
                             android:layout_weight="2"/>
