--- a/app/src/main/res/layout/fragment_manage_product_update_stock.xml
+++ b/app/src/main/res/layout/fragment_manage_product_update_stock.xml
@@ -7,13 +7,42 @@
     android:id="@+id/layoutManageProductStock"
     tools:context=".product.ManageProductUpdateStockFragment">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:elevation="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textColor="@color/colorBlack"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:id="@+id/tvMProdResCapital"
+                android:layout_marginVertical="3dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorBlack"
+                android:gravity="center"
+                android:text="Residual Capital" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:textSize="24sp"
         android:textColor="@color/colorBlack"
-        android:gravity="bottom |center"
+        android:gravity="bottom|center"
         android:text="Current Stock" />
 
     <TextView
