--- a/app/src/main/res/layout/row_check_out_list.xml
+++ b/app/src/main/res/layout/row_check_out_list.xml
@@ -34,7 +34,8 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/layoutRowCheckOut">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
