--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,8 +22,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.SearchView
@@ -49,6 +48,14 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_sort_black_24dp"
                 android:id="@+id/ivHomeSort"
+                android:layout_marginHorizontal="3dp"/>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_format_list_bulleted_black_24dp"
+                android:id="@+id/ivHomeView"
                 android:layout_marginHorizontal="3dp"/>
         </LinearLayout>
 
