--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -126,13 +126,21 @@
         </LinearLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorGrey"
+        android:id="@+id/bgCartProdDetail"
+        android:visibility="gone"
+        android:alpha="0.8"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20sp"
+        android:visibility="gone"
         android:id="@+id/cvCartProdDetail"
-        android:visibility="gone">
+        android:layout_margin="20sp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -141,12 +149,27 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp">
+                android:layout_height="100dp"
+                android:layout_margin="5dp"
+                android:layout_gravity="center">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorGrey"
+                    android:id="@+id/layoutCartDefaultImage">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="20sp"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/tvCartFirstName"
+                        android:gravity="center"/>
+                </FrameLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:src="@drawable/default_image"
                     android:layout_gravity="center"
                     android:id="@+id/ivCartProdImage"/>
@@ -162,7 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textColor="@color/colorBlack"
                 android:id="@+id/tvCartProdName"/>
 
