--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical"
             android:id="@+id/layoutProduct">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
