--- a/app/src/main/res/layout/fragment_manage_product_update_stock.xml
+++ b/app/src/main/res/layout/fragment_manage_product_update_stock.xml
@@ -52,7 +52,8 @@
         android:textSize="56sp"
         android:textStyle="bold"
         android:textColor="@color/colorBlack"
-        android:gravity="center"
+        android:gravity="top|center_horizontal"
+        android:paddingTop="20sp"
         android:id="@+id/tvManageProductStockMovementStock"/>
 
     <Button
