--- a/app/src/main/res/layout/row_product_grid.xml
+++ b/app/src/main/res/layout/row_product_grid.xml
@@ -43,7 +43,8 @@
                 android:layout_height="20dp"
                 android:src="@drawable/tag"
                 android:layout_gravity="end"
-                android:layout_margin="5dp"
+                android:padding="2dp"
+                android:background="@color/colorPending"
                 android:id="@+id/ivRowProductGridWholeSale"/>
         </FrameLayout>
 
